richlist endpoint added
